force-app/main/default/objects/User/fields/User_Login__c.field-meta.xml
<CustomField>
    <fullName>User_Login__c</fullName>
    <formula>IF( IsActive ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>