force-app/main/default/objects/User/fields/WXIntegration__User_Category__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__User_Category__c</fullName>
    <description>DEPRECATED FOR THIS VERSION</description>
    <label>Wealth-X User Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
                <default>true</default>
                <label>Administrator</label>
            </value>
            <value>
                <fullName>Completions</fullName>
            </value>
            <value>
                <fullName>Flight Operations</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>