force-app/main/default/objects/User/fields/WXIntegration__Wealth_X_Permission__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Holds the value whether the user got permission to see wealth x application or not.</description>
    <label>Wealth-X Permission</label>
    <type>Checkbox</type>
</CustomField>